--- a/static/styles/teaorbit.css
+++ b/static/styles/teaorbit.css
@@ -18,7 +18,7 @@ a:hover { border-bottom: 1px solid #666; }
 #header h1 a img { width: 40px; height: 40px; background: #333; border-radius: 50%; display: block; float: left; border: 5px solid #000; margin: 0 0 0 -10px; }
 #header h1 a span { margin-left: 10px; }
 
-#header .button, #header .info { float: right; line-height: 50px; padding: 0 20px 0 20px; margin-left: 1px; }
+#header .button, #header .info, #header #toggle-map { float: right; line-height: 50px; padding: 0 20px 0 20px; margin-left: 1px; }
 #header .button { background: #444; }
 #header .button:hover, #header .button.show { background: #777; border: none; }
 
