--- a/static/styles/teaorbit.css
+++ b/static/styles/teaorbit.css
@@ -70,7 +70,7 @@ input#name { width: 20%; }
 #channels .channel { padding-bottom: 2px; }
 #channels .channel a { background: rgba(0, 0, 0, 0.2); border-radius: 2px; display: inline-block; padding: 2px 4px; }
 #channels .channel a:hover { border: none; color: #222; background: rgba(255,255,255,0.5) }
-#channels h3 { color: rgba(0,0,0,0.4); font-size: 12px; margin: 0; padding: 0; }
+#channels h3 { color: rgba(255,255,255,0.4); font-size: 12px; margin: 2px 0 3px 0; padding: 0; }
 #channels .recent { margin-top: 15px; }
 
 
