--- a/templates/index.html
+++ b/templates/index.html
@@ -98,7 +98,7 @@
             <div id='header'>
                 <a id='show-channels' href='#' class='button'><span id='show-hide-details'>nearby</span></a>
                 <div class='info' id='num-online'>? online</div>
-                <div id='toggle-map'><span class='icon-location'></span></div>
+                <!--<div id='toggle-map'><span class='icon-location'></span></div>-->
                 <span id='audio'></span>
                 <h1 id='logo'><a href='/'><img src='{{ STATIC_URL }}assets/tea-white.png' /><span>tea orbit</span></a></h1>
             </div>
