--- a/templates/index.html
+++ b/templates/index.html
@@ -146,13 +146,30 @@
 
         </script>
         <div id='channels'>
-            <div class='new'>
+            <div class='section new'>
                 <h3>new</h3>
                 <label><span class='new-channel'>#<span contenteditable='true' class='edit'><span/></span></label>
             </div>
-            <div class='recent'>
+            <div class='section recent'>
                 <h3>recent</h3>
                 <div id='recent-channels'>
+                </div>
+            </div>
+            <div class='section suggested'>
+                <h3>suggested</h3>
+                <div id='suggested-channels'>
+                    <div class='channel'>
+                        <a href='/about'>#about</a>
+                    </div>
+                    <div class='channel'>
+                        <a href='/faq'>#faq</a>
+                    </div>
+                    <div class='channel'>
+                        <a href='/contact'>#contact</a>
+                    </div>
+                    <div class='channel'>
+                        <a href='/press'>#press</a>
+                    </div>
                 </div>
             </div>
         </div>
