--- a/templates/index.html
+++ b/templates/index.html
@@ -79,6 +79,7 @@
                     });
                 }
                 window.ui = new UI();
+                // {{ client }}
                 {% if client == 'iPhoneTeaOrbit' %}
                     window.ui.init_ios_native_features();
                 {% else %}
