--- a/templates/index.html
+++ b/templates/index.html
@@ -174,5 +174,9 @@
                 </div>
             </div>
         </div>
+        <div id='choose-color'>
+            go to <a href="" class='login-url'></a> to keep this color
+            <p class='faint'>or clear your cache if you want a new one</p>
+        </div>
     </body>
 </html>
