listen to the white dot

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- listen to the white dot -->
 <html>
     <head>
         <link href='http://fonts.googleapis.com/css?family=PT+Mono' rel='stylesheet' type='text/css'>
