starting geo ip work

--- a/templates/index.html
+++ b/templates/index.html
@@ -152,6 +152,11 @@
                 <h3>new</h3>
                 <label><span class='new-channel'>#<span contenteditable='true' class='edit'><span/></span></label>
             </div>
+            <div class='section new'>
+                <h3>nearby</h3>
+                <div id='nearby-channels'>
+                </div>
+            </div>
             <div class='section recent'>
                 <h3>recent</h3>
                 <div id='recent-channels'>
