--- a/templates/index.html
+++ b/templates/index.html
@@ -168,11 +168,13 @@
             <div class='section new'>
                 <h3>nearby</h3>
                 <div id='nearby-channels'>
+                    <div class='none'>none</div>
                 </div>
             </div>
             <div class='section recent'>
                 <h3>recent</h3>
                 <div id='recent-channels'>
+                    <div class='none'>none</div>
                 </div>
             </div>
             <div class='section suggested'>
