--- a/static/styles/teaorbit.css
+++ b/static/styles/teaorbit.css
@@ -34,7 +34,7 @@ a:hover { border-bottom: 1px solid #666; }
 .color { display: inline-block; height: 16px; width: 16px; border-radius: 8px; position: absolute; left: 5px; top: 5px; }
 #my-color { bottom: 7px; top: auto; cursor: pointer; }
 
-#chat { position: absolute; left: 0; right: 0; bottom: 0; overflow: scroll; z-index: 50; font-size: 13px; -webkit-overflow-scrolling: touch; -webkit-text-size-adjust: none; overflow-x: hidden; }
+#chat { position: absolute; left: 0; right: 0; bottom: 0; overflow: scroll; z-index: 50; font-size: 13px; -webkit-overflow-scrolling: touch; -webkit-text-size-adjust: none; overflow-x: hidden; pointer-events: none; }
 #chat .inner { padding: 30px; }
 #chat .load-more { display: block; padding: 3px 30px; background: rgba(0, 0, 0, 0.1); color: rgba(255,255,255,0.2); text-align: center; visibility: hidden; }
 #chat .load-more:hover { color: rgba(255,255,255,0.5); border: none; }
@@ -42,7 +42,7 @@ a:hover { border-bottom: 1px solid #666; }
 #chat.truncated { padding-right: 220px; }
 
 .message { background: rgba(255,255,255,0.1); padding: 5px 10px 5px 30px; border-radius: 3px; display: inline-block; margin: 2px 0;  position: relative; line-height: 16px; min-height: 16px; font-size: 13px; white-space: pre-wrap; word-wrap: break-word; max-width: 100%; max-width: calc(100% - 60px); }
-.date { display: inline-block; color: #444; font-size: 12px; margin-left: 5px; -webkit-text-size-adjust: none; }
+.date { display: inline-block; color: #444; text-shadow: 1px 1px 1px #333; font-size: 12px; margin-left: 5px; -webkit-text-size-adjust: none; }
 .row:hover .date { color: #aaa; }
 .row:hover .message { color: #ccc; }
 .row:hover .name { color: #aaa; }
@@ -90,6 +90,8 @@ a:hover { border-bottom: 1px solid #666; }
 #online-users { padding: 10px 0 10px 20px; background: #000; display: none; z-index: 200; position: relative; }
 
 #drawing {  background: #fff; }
+
+#map { position: absolute; top: 30px; right: 30px; bottom: 30px; left: 0px; box-shadow: 0px 0 15px #000; background: rgba(255,255,255,0.1); z-index: 1; }
 
 @media only screen 
 and (min-device-width : 320px) 
