--- a/templates/index.html
+++ b/templates/index.html
@@ -150,16 +150,6 @@
                 </div>
             </div>
         </div>
-        <script>
-            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-            ga('create', 'UA-46162095-1', 'teaorbit.com');
-            ga('send', 'pageview');
-
-        </script>
         <div id='channels'>
             <div class='section new'>
                 <h3>new</h3>
@@ -205,5 +195,137 @@
             go to <a href="" class='login-url'></a> to keep this color
             <p class='faint'>or clear your cache if you want a new one</p>
         </div>
+        <div id='map'>
+        </div>
+        <script>
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+            ga('create', 'UA-46162095-1', 'teaorbit.com');
+            ga('send', 'pageview');
+
+        </script>
+        <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyASm3CwaK9qtcZEWYa-iQwHaGi3gcosAJc&sensor=false"></script>
+        <script type="text/javascript"> 
+            google.maps.event.addDomListener(window, 'load', init_map);
+        
+            function init_map() {
+                // Basic options for a simple Google Map
+                // For more options see: https://developers.google.com/maps/documentation/javascript/reference#MapOptions
+                var mapOptions = {
+                    backgroundColor: "#333333",
+                    disableDefaultUI: true,
+                    zoomControl: true,
+                    scaleControl: true,
+                    // How zoomed in you want the map to start at (always required)
+                    zoom: 11,
+
+                    // The latitude and longitude to center the map (always required)
+                    center: new google.maps.LatLng(49.2500, -123.1000),
+
+                    // How you would like to style the map. 
+                    // This is where you would paste any style found on Snazzy Maps.
+                    styles: [
+                    {
+                        "stylers": [{
+                            "saturation": -100
+                        }]
+                    }, {
+                        "elementType": "labels",
+                        "stylers": [{
+                            "visibility": "off"
+                        }]
+                    }, {
+                        "featureType": "landscape.manmade",
+                        "stylers": [{
+                            "color": "#404040",
+                            "saturation": -100,
+                        }]
+                    }, {
+                        "featureType": "road",
+                        "elementType": "geometry",
+                        "stylers": [{
+                            "color": "#505050"
+                        }, {
+                            "visibility": "on"
+                        }, {
+                            "weight": 1
+                        }]
+                    }, {
+                        "featureType": "administrative",
+                        "elementType": "labels",
+                        "stylers": [{
+                            "visibility": "off"
+                        }]
+                    }, {
+                        "featureType": "road.highway",
+                        "elementType": "labels",
+                        "stylers": [{
+                            "visibility": "off"
+                        }, {
+                            "gamma": 1.14
+                        }, {
+                            "saturation": -100
+                        }]
+                    }, {
+                        "featureType": "road.highway.controlled_access",
+                        "elementType": "labels",
+                        "stylers": [{
+                            "saturation": 30
+                        }, {
+                            "gamma": 0.76
+                        }]
+                    }, {
+                        "featureType": "road.local",
+                        "stylers": [{
+                            "visibility": "simplified"
+                        }, {
+                            "weight": 0.4
+                        }, {
+                            "lightness": -8
+                        }]
+                    }, {
+                        "featureType": "water",
+                        "stylers": [{
+                            "color": "#333333"
+                        }]
+                    }, {
+                        "featureType": "administrative.locality",
+                        "elementType": "labels.text.stroke",
+                        "stylers": [{
+                            "weight": 2.7
+                        }, {
+                            "color": "#000000"
+                        }]
+                    }, {
+                        "featureType": "road.highway.controlled_access",
+                        "elementType": "geometry.stroke",
+                        "stylers": [{
+                            "weight": 1.5
+                        }, {
+                            "saturation": -100
+                        }, {
+                            "lightness": 100
+                        }, {
+                            "color": "#444444"
+                        }]
+                    }]
+                };
+
+                // Get the HTML DOM element that will contain your map 
+                // We are using a div with id="map" seen below in the <body>
+                var mapElement = document.getElementById('map');
+
+                // Create the Google Map using out element and options defined above
+                window.map = new google.maps.Map(mapElement, mapOptions);
+
+                window.overlay = new google.maps.OverlayView();
+                overlay.draw = function() {};
+                overlay.setMap(window.map);
+            }
+        
+        </script>
     </body>
 </html>
